--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "particles.js": "^2.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-tsparticles": "^2.9.3",
+    "tsparticles": "^2.9.3",
+    "tsparticles-engine": "^2.9.3",
     "typescript": "5.0.2"
   },
   "devDependencies": {
